--- a/ReadTemp_06/www/resources/main.css
+++ b/ReadTemp_06/www/resources/main.css
@@ -114,6 +114,7 @@ a {
   color: #fcb03c;
 }
 
+/*
 ::selection {
   background: #07a197;
 }
@@ -121,6 +122,7 @@ a {
 ::-moz-selection {
   background: #07a197;
 }
+*/
 
 .fixed {
   position: fixed;
@@ -150,7 +152,6 @@ a {
   -moz-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  padding-bottom: 100px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00cbff+0,00ff9d+100 */
 background: #00cbff; /* Old browsers */
 background: -moz-linear-gradient(top,  #00cbff 0%, #00ff9d 100%); /* FF3.6-15 */
@@ -231,6 +232,35 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00cbff', end
   background-color: white;
 }
 
+.box {
+  display: inline-block;
+  width:50%;
+  height: 50%;
+  text-align: center;
+}
+
+#stats:nth-child(1) {
+  background-color: pink;
+}
+
+.box .text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.box .label {
+  display: block;
+  margin: 15px 0;
+}
+
+.box::after{
+  display: inline-block;
+  height: 100%;
+  width: 0; 
+  vertical-align: middle;
+  content: "";
+}
+
 /* RESPONSIVE */
 
 @media all and (max-width: 600px) {
@@ -283,4 +313,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00cbff', end
     font-size: 0.9em;
   }
 }
+
+  /* stats */
+  @media screen and (max-width: 600px){
+    .box {
+      width:100%;
+      height: 25%;
+    }
+  }
 
